--- a/htmltest.html
+++ b/htmltest.html
@@ -1,12 +1,18 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="csstest.css">
+<title>My Blog</title>
 </head>
-<title>first page</title>
 <body>
-This is a line of text
+    <p>This is a Paragraph.</p>
+    <p>This is another Paragraph</p>
+    <p>This is <br/> a line break.</p>
+    <p><b>bold text</b></p>
+    <p><big>big text</big><p>
+    <p><del>italic text</del></p>
+
+
+
 </body>
-
-
-
 </html>
