--- a/htmltest.html
+++ b/htmltest.html
@@ -1,18 +1,25 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="csstest.css">
+  <link href="style.css"
+  		type="text/css"
+  		rel="stylesheet">
 <title>My Blog</title>
 </head>
-<body>
-    <p>This is a Paragraph.</p>
-    <p>This is another Paragraph</p>
-    <p>This is <br/> a line break.</p>
-    <p><b>bold text</b></p>
-    <p><big>big text</big><p>
-    <p><del>italic text</del></p>
+	<body>
+    	<div id="intro">
+    		<p>This is a Paragraph.</p>
+    		<p>This is another Paragraph</p>
+    		<p>This is <br/> a line break.</p>
+   		 </div>
+
+  		<div id=einz>	
+    		<p class="first">bold <em>text</em><p>
+    		<p class="second">big text<p>
+    		<p class="third">italic text</p>
+    	</div>
 
 
 
-</body>
+	</body>
 </html>
